--- a/Ressources/Css/style.css
+++ b/Ressources/Css/style.css
@@ -37,7 +37,7 @@ html {
     background-color: #fff;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4{
     color:#000;
     font-family: 'Cinzel', serif;
     text-transform: uppercase;
