Ajout de l'onglet Proshop
Ajout de l'onglet proshop+1ère partie de cet onglet.
Correction du pb responsive logo footer.
Et mise à jour de la bar de nav

--- a/Ressources/Css/stylepage2.css
+++ b/Ressources/Css/stylepage2.css
@@ -126,15 +126,18 @@ footer {
     background-size:cover;
     background-position: top;
     background-attachment: fixed;
+    
+    
 }
 
 .icons img {
-    width: 80px;
+    width: 50px;
     margin-left: 20%;
+    display: inline-block;
 }
 
 .mention {
     text-align: end;
-    margin-top: 25px;
+    margin-top: 50px;
     margin-right: 5px;
 }
