--- a/Ressources/Css/style.css
+++ b/Ressources/Css/style.css
@@ -73,6 +73,7 @@ header {
     background-image: url(../Images/header.jpg);
     height: 100vh;
     background-size: cover;
+    
 }
 
 .main-title h1 {
@@ -131,6 +132,7 @@ header {
     border-radius: 10px;
     border-color: #000;
     
+    
 }
 .btn:hover {
     background-color: rgba(0,0,0,0.4);
@@ -142,6 +144,7 @@ header {
 .btn-header {
     font-family: 'Cinzel', serif;
     margin-top: 500px;
+    
     }
 
 /* --------------------------------------------ACTUALITÉES--------------------------------------------*/
@@ -157,6 +160,7 @@ header {
 
 /* --------------------------------------------FOOTER--------------------------------------------*/
 
+
 footer {
     height: 220px;
     background-image: url(../Images/footer.jpg);
@@ -164,15 +168,17 @@ footer {
     background-size:cover;
     background-position: top;
     background-attachment: fixed;
+    
 }
 
 .icons img {
-    width: 80px;
+    width: 50px;
     margin-left: 20%;
+    display: inline-block;
 }
 
 .mention {
     text-align: end;
-    margin-top: 25px;
+    margin-top: 50px;
     margin-right: 5px;
 }
