Mise en place de l'onglet proshop et partie autres produits
Ne reste plus qu'a mettre les blocks à côtés par deux

--- a/Ressources/Css/styleproshop.css
+++ b/Ressources/Css/styleproshop.css
@@ -182,13 +182,66 @@ ul li{
     list-style-type: none;
 }
 
-.img-ping {
-    background-image: url(../Images/putterping.jpg);
-    background-color: #000;
+.img-ping img {
+
+    width: 100%;
+    margin-top: 40px;
+    border-radius: 10px;
+    
+}
+
+.img-club-drive img {
+    width: 100%;
+    margin-top: 40px;
+    border-radius: 10px;
+}
+
+.img-club-sw img {
+    width: 100%;
+    margin-top: 40px;
+    border-radius: 10px;
+}
+
+.img-club-sac img {
+    width: 100%;
+    margin-top: 40px;
+    border-radius: 10px;
+}
+
+.btn-ps1 {
+    margin-top: 10px;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    padding: 0 40px;
+    border: 0;
+    line-height: 2.5;
+    text-shadow: 1px 1px 1px #242424;
+    color: #fff;
+    background-color: rgb(177, 2, 2);
+    border-radius: 10px;
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+    
+}
+
+.btn-ps1:hover {
+    background-color: rgba(260, 0, 0,0.6);
+}
+
+.btn-ps1 a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.border {
+    border: 2px #ddd2d2 solid;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 /* --------------------------------------------FOOTER--------------------------------------------*/
 
 footer {
+    margin-top: 20px;
     height: 220px;
     background-image: url(../Images/footer.jpg);
     background-repeat: no-repeat;
