Ajout Onglet contact
Problème section contact-form avec la carte qui se met en dessous

--- a/Ressources/Css/style.css
+++ b/Ressources/Css/style.css
@@ -68,7 +68,7 @@ p {
 
 
 /* --------------------------------------------HEADER--------------------------------------------*/
-header {
+#P1 {
     text-align: center;
     background-image: url(../Images/header.jpg);
     height: 100vh;
@@ -147,6 +147,27 @@ header {
     
     }
 
+    .btn-general {
+        padding: 0 40px;
+        border: 0;
+        line-height: 2.5;
+        text-shadow: 1px 1px 1px #242424;
+        color: #fff;
+        background-color: rgb(177, 2, 2);
+        border-radius: 10px;
+        box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                    inset -2px -2px 3px rgba(0, 0, 0, .6);
+        
+    }
+    
+    .btn-general:hover {
+        background-color: rgba(260, 0, 0,0.6);
+    }
+    
+    .btn-general a {
+        text-decoration: none;
+        color: #fff;
+    }
 /* --------------------------------------------ACTUALITÉES--------------------------------------------*/
 
 .actu { /*Revoir la notion de col md pour les affichages exemple voir site*/
@@ -168,6 +189,7 @@ footer {
     background-size:cover;
     background-position: top;
     background-attachment: fixed;
+    width: 100%;
     
 }
 
@@ -181,4 +203,31 @@ footer {
     text-align: end;
     margin-top: 50px;
     margin-right: 5px;
+}
+
+
+
+
+/* -------------------------------------------------------------------------------ONGLET CONTACT-------------------------------------------------------------------------------*/
+
+#contact {
+
+    text-align: center;
+    background-image: url(../Images/contact.jpg);
+    background-size: cover;
+    height: 100vh;
+    
+}
+
+#formulaire-contact {
+    margin-bottom: 20px;
+}
+
+#title-contact-message {
+    margin-top: 20px;
+}
+
+
+.map {
+    margin-top:40px
 }
