--- a/Ressources/Css/styleproshop.css
+++ b/Ressources/Css/styleproshop.css
@@ -37,7 +37,16 @@ html {
     background-color: #fff;
 }
 
-h1, h2, h3, h4{
+h1 {
+    color: rgb(0, 0, 0);
+    font-family: 'Cinzel', serif;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 20px;
+    text-shadow:rgb(255, 255, 255) 1px 3px;
+}
+
+h2, h3, h4{
     color:#000;
     font-family: 'Cinzel', serif;
     text-transform: uppercase;
@@ -83,11 +92,11 @@ p {
     background-position: center;
     background-size: cover;
     
-    height: 50vh;
+    height: 60vh;
 }
 .head-txt-ps {
     display: block;
-    padding-top: 210px;
+    margin-top: 10%;
 }
 
 
